jbook - workaround to avoid some overlapping issues while dragging horizontally

--- a/jbook/src/components/preview.css
+++ b/jbook/src/components/preview.css
@@ -8,6 +8,7 @@
   height: 100%;
   width: 100%;
   background-color: white;
+  display: block;
 }
 
 .react-draggable-transparent-selection .preview-wrapper::after {
